...
  Widget build(BuildContext context) {
    // Obtém o estado do ViewModel
    final state = ref.watch(benefitViewModelProvider);
    
    return Scaffold(
      appBar: AppBar(
        title: const Text('Meus Benefícios'),
        bottom: TabBar(
          controller: _tabController,
          tabs: [
            Tab(text: 'Ativos'),
            Tab(text: 'Utilizados'),
            Tab(text: 'Expirados'),
...
