...
            children: [
              Row(
                children: [
                  const Icon(Icons.card_giftcard, color: AppColors.info),
                  const SizedBox(width: 8),
                  Text(
                    'Benefícios Resgatados',
                    style: AppTypography.titleMedium.copyWith(
                      fontWeight: FontWeight.bold,
                    ),
                  ),
                ],
              ),
...
